--- a/hexagon_dance/index.html
+++ b/hexagon_dance/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>gifs1</title>
+	<title>hexagon dance</title>
 	<meta name="author" content="kiddspazz">
 	<link href="css/stylesheet.css" type="text/css" rel="stylesheet">
 </head>
